Add wnieder to Authors Change "author" to "maintainer" in script since there are so many contributions already

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 Dmytro Prokhorenkov <liet@liet.kiev.ua>
 Lars Engels <lars@0x20.net>
 Thomas Widhalm <thomas.widhalm@icinga.com>
+wnieder <wnd@gmx.net>
