--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
+Afeef Ghannam <afeef.ghannam@netways.de>
 Dmytro Prokhorenkov <liet@liet.kiev.ua>
 Lars Engels <lars@0x20.net>
 Thomas Widhalm <thomas.widhalm@icinga.com>
